# STEM-10-Assessment-2

./: .gitignore  Cargo.toml  LICENSE  Trunk.toml  index.html  styles.scss
.github/workflows/: deploy.yml
a04-base-converter/: Cargo.toml  index.html  styles.scss  updatevalue.js
a04-base-converter/src/: main.rs
a04-base-converter/src/components/: mod.rs  number_input.rs
assets/: browserconfig.xml
e05-time-converter/: Cargo.toml  index.html
e05-time-converter/src/: main.rs
p01-basic-squaring/: Cargo.toml  index.html
p01-basic-squaring/src/: main.rs
p01-basic-squaring/src/components/: number_input.rs
p02-temperature-converter/: Cargo.toml  index.html  styles.scss
p02-temperature-converter/src/: main.rs
p02-temperature-converter/src/components/: number_input.rs
p03-basic-calculator/: Cargo.toml  README.md  index.html  resizetext.js  styles.scss
p03-basic-calculator/assets/: site.webmanifest
p03-basic-calculator/src/: main.rs
p03-basic-calculator/src/components/: button.rs
scripts/: resizetext.js  updatevalue.js
src/: main.rs
src/projects/: basic_squaring.rs  mod.rs  temperature_converter.rs  time_converter.rs
src/projects/base_converter/: mod.rs
src/projects/base_converter/components/: number_input.rs
src/projects/basic_calculator/: mod.rs
src/projects/basic_calculator/components/: button.rs  mod.rs
