[package]
name = "p02-temperature-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["HtmlInputElement"] }
gloo = "0.8.0"

[profile.release]
# more info https://rustwasm.github.io/book/reference/code-size.html#optimizing-builds-for-code-size
# inlines and prunes functions for smaller and faster binary
lto = true
# optimise for size rather than speed to speed up loading time
opt-level = 's'
